--- a/templates/actor/parts/actor-body-boss.html
+++ b/templates/actor/parts/actor-body-boss.html
@@ -17,62 +17,35 @@
   {{!-- Owned Traits Tab --}}
   <div class="tab traits" data-group="primary" data-tab="traits">
     <section class="grid grid-3col">
-      <aside class="sidebar">
-        <h3>Attributes</h3>
-        {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
-        use both the "grid" and "grid-Ncol" class where "N" can be any number
-        from 1 to 12 and will create that number of columns.  --}}
         <div class="attributes flexcol">
-          {{#each system.attributes as |attribute key|}}
-          <div class="attribute flexrow flex-group-center">
-            <button class="attribute rollable small-button" data-rolltype="actor" data-roll="@attributes.{{key}}.value" data-label="{{key}}" data-kind="Attribute"><i class="fas fa-dice-d20"></i></button>
-            <label for="system.attributes.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="@attributes.{{key}}.value" data-label="{{attribute.label}}" data-kind="Attribute">{{attribute.label}}</label>
-            <input type="text" name="system.attributes.{{key}}.value" value="{{attribute.value}}" data-dtype="String"/>
-          </div>
-          {{/each}}
+          {{> "systems/earthland/templates/actor/parts/actor-attributes.html"}}
         </div>
-      </aside>
 
         <div class="roles flexcol">
-          <h3>Roles</h3>
-          {{#each system.roles as |role key|}}
-          <div class="role flexrow flex-group-center">
-            <button class="role rollable small-button" data-rolltype="actor" data-roll="@roles.{{key}}.value" data-label="{{key}}" data-kind="Role"><i class="fas fa-dice-d20"></i></button>
-            <label for="system.roles.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="@roles.{{key}}.value" data-label="{{role.label}}" data-kind="Role">{{role.label}}</label>
-            <input type="text" name="system.roles.{{key}}.value" value="{{role.value}}" data-dtype="String"/>
-          </div>
-          {{/each}}
+          {{> "systems/earthland/templates/actor/parts/actor-roles.html"}}
           <br/>
           <hr/>
           <br/>
-          <h3>Classes</h3>
-          {{#each system.classes as |class key|}}
-          <div class="class flexrow flex-group-center">
-            <button class="class rollable small-button" data-rolltype="actor" data-roll="@classes.{{key}}.value" data-label="{{key}}" data-kind="Class"><i class="fas fa-dice-d20"></i></button>
-            <label for="system.classes.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="@classes.{{key}}.value" data-label="{{class.label}}" data-kind="Class">{{class.label}}</label>
-            <input type="text" name="system.classes.{{key}}.value" value="{{class.value}}" data-dtype="String"/>
-          </div>
-          {{/each}}
-
+          {{> "systems/earthland/templates/actor/parts/actor-combat-roles.html"}}
         </div>
 
-        <div class="distinctions">
-          <h3>Distinctions</h3>
-          <div class="distinction flexrow flex-group-center">
+        <div class="distinctions flexcol">
+          <div class="distinction"><!-- flexrow flex-group-center -->
+            <h3>Distinctions</h3>
             {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
           </div>
           <br/>
           <hr/>
           <br/>
-          <h3>Specialties</h3>
-          <div class="specialty flexrow flex-group-center">
+          <div class="specialty">
+            <h3>Specialties</h3>
             {{> "systems/earthland/templates/actor/parts/actor-specialties.html"}}
           </div>
           <br/>
           <hr/>
           <br/>
-          <h3>Complications</h3>
-          <div class="complication flexrow flex-group-center">
+          <div class="complication">
+            <h3>Complications</h3>
             {{> "systems/earthland/templates/actor/parts/actor-complications.html"}}
           </div>
         </div>
@@ -97,6 +70,16 @@
   {{!-- Owned Spells Tab --}}
   <div class="tab spells" data-group="primary" data-tab="spells">
     {{> "systems/earthland/templates/actor/parts/actor-spells.html"}}
+  </div>
+
+  {{!-- Owned Milestones Tab --}}
+  <div class="tab milestones" data-group="primary" data-tab="milestones">
+    {{> "systems/earthland/templates/actor/parts/actor-milestones.html"}}
+  </div>
+
+  {{!-- Active Effects Tab --}}
+  <div class="tab effects flexcol" data-group="primary" data-tab="effects">
+    {{> "systems/earthland/templates/actor/parts/actor-effects.html"}}
   </div>
 
   {{!-- Biography Tab --}}
