--- a/templates/actor/parts/actor-body-elite.html
+++ b/templates/actor/parts/actor-body-elite.html
@@ -72,6 +72,16 @@
     {{> "systems/earthland/templates/actor/parts/actor-spells.html"}}
   </div>
 
+  {{!-- Owned Milestones Tab --}}
+  <div class="tab milestones" data-group="primary" data-tab="milestones">
+    {{> "systems/earthland/templates/actor/parts/actor-milestones.html"}}
+  </div>
+
+  {{!-- Active Effects Tab --}}
+  <div class="tab effects flexcol" data-group="primary" data-tab="effects">
+    {{> "systems/earthland/templates/actor/parts/actor-effects.html"}}
+  </div>
+
   {{!-- Biography Tab --}}
   <div class="tab biography" data-group="primary" data-tab="notes">
     {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
