--- a/templates/actor/parts/actor-spells.html
+++ b/templates/actor/parts/actor-spells.html
@@ -1,30 +1,33 @@
-<ol class="items-list">
-  {{#each spells as |spells spellLevel|}}
-    <li class="item flexrow items-header">
-      <div class="item-name">Level {{spellLevel}} Spells</div>
-      <div class="item-name">Actions</div>
-      <div class="item-controls">
-        <a class="item-control item-create" title="Create item" data-type="spell" data-level="{{spellLevel}}"><i class="fas fa-plus"></i> Add LVL {{spellLevel}}</a>
-      </div>
-    </li>
-    {{#each spells as |item id|}}
-      <li class="item flexrow" data-item-id="{{item._id}}">
-        <div class="item-name flexrow">
-          <div class="item-image">
-            <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-          </div>
-          <h4>{{item.name}}</h4>
-        </div>
-        <div class="item-name">
-          {{#if item.system.dice}}
-            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{item.system.dice}}" data-label="{{item.name}}" data-kind="spell" data-level="{{spellLevel}}"><i class="fas fa-dice-d20"></i></button>
-          {{/if}}
-        </div>
+<div class="spells">
+  <h3>Spells</h3>
+  <ol class="items-list">
+    {{#each spells as |spells spellLevel|}}
+      <li class="item flexrow items-header">
+        <div class="item-name">Level {{spellLevel}} Spells</div>
+        <div class="item-name">Actions</div>
         <div class="item-controls">
-          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+          <a class="item-control item-create" title="Create item" data-type="spell" data-level="{{spellLevel}}"><i class="fas fa-plus"></i> Add LVL {{spellLevel}}</a>
         </div>
       </li>
+      {{#each spells as |item id|}}
+        <li class="item flexrow" data-item-id="{{item._id}}">
+          <div class="item-name flexrow">
+            <div class="item-image">
+              <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            </div>
+            <h4>{{item.name}}</h4>
+          </div>
+          <div class="item-name">
+            {{#if item.system.dice}}
+              <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{item.system.dice}}" data-label="{{item.name}}" data-kind="spell" data-level="{{spellLevel}}"><i class="fas fa-dice-d20"></i></button>
+            {{/if}}
+          </div>
+          <div class="item-controls">
+            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+          </div>
+        </li>
+      {{/each}}
     {{/each}}
-  {{/each}}
-</ol>
+  </ol>
+</div>
