added motivations, goals, virtues and vices

--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -56,7 +56,7 @@
     <a class="item" data-tab="equipment">Gear</a>
     <a class="item" data-tab="spells">Magic</a>
     <a class="item" data-tab="relationships">Relationships</a>
-    <a class="item" data-tab="milestones">Milestones</a>
+    <a class="item" data-tab="milestones">Goals</a>
     <a class="item" data-tab="effects">Effects</a>
     <a class="item" data-tab="notes">Notes</a>
   </nav>
