--- a/templates/actor/parts/actor-body-elite.html
+++ b/templates/actor/parts/actor-body-elite.html
@@ -6,7 +6,7 @@
   <a class="item" data-tab="equipment">Gear</a>
   <a class="item" data-tab="spells">Magic</a>
   <a class="item" data-tab="relationships">Relationships</a>
-  <a class="item" data-tab="milestones">Milestones</a>
+  <a class="item" data-tab="milestones">Goals</a>
   <a class="item" data-tab="effects">Effects</a>
   <a class="item" data-tab="notes">Notes</a>
 </nav>
@@ -74,7 +74,7 @@
 
   {{!-- Owned Milestones Tab --}}
   <div class="tab milestones" data-group="primary" data-tab="milestones">
-    {{> "systems/earthland/templates/actor/parts/actor-milestones.html"}}
+    {{> "systems/earthland/templates/actor/parts/actor-npc-goals.html"}}
   </div>
 
   {{!-- Active Effects Tab --}}
