--- a/templates/actor/parts/actor-features.html
+++ b/templates/actor/parts/actor-features.html
@@ -91,8 +91,41 @@
 </div>
 
 <div class="resource flex-group-center">
-  <h2>Subclasses</h2>
+  <h2>Classes & Subclasses</h2>
 </div>
+
+<div class="trait-group">
+  <h3>Classes</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Class" data-type="class"><i class="fas fa-plus"></i> Add Class</a>
+      </div>
+    </li>
+    {{#each classes as |class id|}}
+      <li class="item flexrow" data-item-id="{{class._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{class.img}}" title="{{class.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{class.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if class.system.dice}}
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{class.system.dice}}" data-label="{{class.name}}" data-kind="class"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
 
 <div class="trait-group">
   <h3>Subclasses</h3>
