--- a/templates/item/item-class-sheet.html
+++ b/templates/item/item-class-sheet.html
@@ -17,9 +17,10 @@
 
     {{!-- Attributes Tab --}}
     <div class="tab attributes" data-group="primary" data-tab="attributes">
+
       <div class="resource">
-        <label class="resource-label">Level</label>
-        <input type="text" name="system.level" value="{{system.level}}" data-dtype="Number"/>
+        <label class="resource-label">Requirements</label>
+        <input type="text" name="system.requirements" value="{{system.requirements}}" data-dtype="String"/>
       </div>
 
       <div>
