--- a/templates/item/item-complication-sheet.html
+++ b/templates/item/item-complication-sheet.html
@@ -30,6 +30,16 @@
         {{> "systems/earthland/templates/item/parts/rollable.html"}}
       </div>
 
+      <div class="resource">
+        <label class="resource-label">Is it Permanent?</label>
+        <input class="input-checkbox-cpt" name="system.is_permanent" type="checkbox" {{checked system.is_permanent}}>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Is it Semi-Permanent?</label>
+        <input class="input-checkbox-cpt" name="system.is_semi_permanent" type="checkbox" {{checked system.is_semi_permanent}}>
+      </div>
+
     </div>
 
     {{!-- Description Tab --}}
