--- a/templates/item/item-spell-sheet.html
+++ b/templates/item/item-spell-sheet.html
@@ -23,8 +23,13 @@
       </div>
 
       <div class="resource">
-        <label class="resource-label">Spell Cost</label>
-        <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number"/>
+        <label class="resource-label">Spell MP Cost</label>
+        <input type="text" name="system.mp_cost" value="{{system.mp_cost}}" data-dtype="Number"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Spell Energy Cost</label>
+        <input type="text" name="system.energy_cost" value="{{system.energy_cost}}" data-dtype="Number"/>
       </div>
 
       <div class="resource">
