--- a/templates/actor/parts/actor-header-monster-elite.html
+++ b/templates/actor/parts/actor-header-monster-elite.html
@@ -1,4 +1,3 @@
-<h2>Elite Monster</h2>
 <div class="resources grid grid-3col">
   {{!-- "flex-group-center" is also defined in the _grid.scss file
   and it will add a small amount of padding, a border, and will
@@ -18,6 +17,7 @@
     <input type="text" name="system.magic.value" value="{{system.magic.value}}" data-dtype="Number"/>
     </div>
   </div>
+
   <div class="resource flex-group-center">
     <label for="system.energy.value" class="resource-label">Energy</label>
     <div class="resource-content flexrow flex-center flex-between">
@@ -28,9 +28,32 @@
   </div>
 </div>
 
+<div class="resources grid grid-3col">
+  <div class="resource flex-group-center">
+    <label for="system.resistances" class="resource-label">Reistances</label>
+    <div class="resource-content flexrow flex-center flex-between">
+    <input type="text" name="system.resistances" value="{{system.resistances}}" data-dtype="String"/>
+    </div>
+  </div>
+
+  <div class="resource flex-group-center">
+    <label for="system.immunities" class="resource-label">Immunities</label>
+    <div class="resource-content flexrow flex-center flex-between">
+    <input type="text" name="system.immunities" value="{{system.immunities}}" data-dtype="String"/>
+    </div>
+  </div>
+
+  <div class="resource flex-group-center">
+    <label for="system.weaknesses" class="resource-label">Weaknesses</label>
+    <div class="resource-content flexrow flex-center flex-between">
+    <input type="text" name="system.weaknesses" value="{{system.weaknesses}}" data-dtype="String"/>
+    </div>
+  </div>
+</div>
+
 <div class="resources">
   <div class="resource flex-group-left">
-    <section class="grid grid-3col" style="width: 400px;">
+    <section class="grid grid-2col" style="width: 400px;">
       <div class="flex-col pr-0 flex-s-1">
         <label for="system.armor_class.value" class="resource-label">Armor Class</label>
         {{> "systems/earthland/templates/partials/dice/select.html"
