--- a/templates/item/item-ability-sheet.html
+++ b/templates/item/item-ability-sheet.html
@@ -18,8 +18,13 @@
     {{!-- Attributes Tab --}}
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       <div class="resource">
-        <label class="resource-label">Cost</label>
-        <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number"/>
+        <label class="resource-label">Spell MP Cost</label>
+        <input type="text" name="system.mp_cost" value="{{system.mp_cost}}" data-dtype="Number"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Spell Energy Cost</label>
+        <input type="text" name="system.energy_cost" value="{{system.energy_cost}}" data-dtype="Number"/>
       </div>
 
       <div class="resource">
@@ -32,14 +37,12 @@
         <input type="text" name="system.requirements" value="{{system.requirements}}" data-dtype="String"/>
       </div>
 
-      <div class="resource">
-        <label class="resource-label">Dice</label>
-        <input type="text" name="system.dice" value="{{system.dice}}" data-dtype="String"/>
+      <div>
+        {{> "systems/earthland/templates/item/parts/magic.html"}}
       </div>
 
-      <div class="resource">
-        <label class="resource-label">Special Effects</label>
-        <input type="text" name="system.sfx" value="{{system.sfx}}" data-dtype="String"/>
+      <div>
+        {{> "systems/earthland/templates/item/parts/rollable.html"}}
       </div>
 
       <div class="resource">
