--- a/templates/item/item-equipment-sheet.html
+++ b/templates/item/item-equipment-sheet.html
@@ -27,6 +27,16 @@
         <input class="input-checkbox-cpt" name="system.consumed_on_use" type="checkbox" {{checked system.consumed_on_use}}>
       </div>
 
+      <div class="resource">
+        <label class="resource-label">MP Cost</label>
+        <input type="text" name="system.mp_cost" value="{{system.mp_cost}}" data-dtype="Number"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Energy Cost</label>
+        <input type="text" name="system.energy_cost" value="{{system.energy_cost}}" data-dtype="Number"/>
+      </div>
+
       <div>
         {{> "systems/earthland/templates/item/parts/physical-item.html"}}
       </div>
