--- a/templates/item/item-trinket-sheet.html
+++ b/templates/item/item-trinket-sheet.html
@@ -32,6 +32,17 @@
         <input type="text" name="system.active_effects" value="{{system.active_effects}}" data-dtype="String"/>
       </div>
 
+      <div class="resource">
+        <label class="resource-label">MP Cost</label>
+        <input type="text" name="system.mp_cost" value="{{system.mp_cost}}" data-dtype="Number"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Energy Cost</label>
+        <input type="text" name="system.energy_cost" value="{{system.energy_cost}}" data-dtype="Number"/>
+      </div>
+
+
       <div>
         {{> "systems/earthland/templates/item/parts/physical-item.html"}}
       </div>
