--- a/templates/item/item-weapon-sheet.html
+++ b/templates/item/item-weapon-sheet.html
@@ -32,6 +32,16 @@
         <input type="text" name="system.range" value="{{system.range}}" data-dtype="String"/>
       </div>
 
+      <div class="resource">
+        <label class="resource-label">MP Cost</label>
+        <input type="text" name="system.mp_cost" value="{{system.mp_cost}}" data-dtype="Number"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Energy Cost</label>
+        <input type="text" name="system.energy_cost" value="{{system.energy_cost}}" data-dtype="Number"/>
+      </div>
+
       <div>
         {{> "systems/earthland/templates/item/parts/rollable.html"}}
       </div>
