--- a/templates/actor/parts/actor-body-npc-mob.html
+++ b/templates/actor/parts/actor-body-npc-mob.html
@@ -41,7 +41,7 @@
           </div>
           <div class="item-name">
             {{#if ability.system.dice}}
-              <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{ability.system.dice}}" data-label="{{ability.name}}" data-kind="ability"><i class="fas fa-dice-d20"></i></button>
+              <button title="Add to Dice-Pool" class="role rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject ability.system.dice.value}}" data-label="{{ability.name}}" data-kind="ability"><i class="fas fa-dice-d20"></i></button>
             {{/if}}
           </div>
           <div class="item-controls">
