--- a/templates/actor/parts/actor-monster-features.html
+++ b/templates/actor/parts/actor-monster-features.html
@@ -46,7 +46,7 @@
         </div>
         <div class="item-name">
           {{#if feature.system.dice}}
-            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{feature.system.dice}}" data-label="{{feature.name}}" data-kind="feature"><i class="fas fa-dice-d20"></i></button>
+            <button title="Add to Dice-Pool" class="role rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject feature.system.dice.value}}" data-label="{{feature.name}}" data-kind="feature"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -78,7 +78,7 @@
         </div>
         <div class="item-name">
           {{#if ability.system.dice}}
-            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{ability.system.dice}}" data-label="{{ability.name}}" data-kind="ability"><i class="fas fa-dice-d20"></i></button>
+            <button title="Add to Dice-Pool" class="role rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject ability.system.dice.value}}" data-label="{{ability.name}}" data-kind="ability"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
