More fixes for item rolling

--- a/templates/actor/parts/actor-features.html
+++ b/templates/actor/parts/actor-features.html
@@ -65,7 +65,7 @@
       <div class="item-name">Name</div>
       <div class="item-name">Action</div>
       <div class="item-controls">
-        <a class="item-control item-create" title="Create Ability" data-type="ability-species"><i class="fas fa-plus"></i> Add Species Ability</a>
+        <a class="item-control item-create" title="Create Species Ability" data-type="ability-species"><i class="fas fa-plus"></i> Add Species Ability</a>
       </div>
     </li>
     {{#each species_abilities as |ability id|}}
@@ -203,7 +203,7 @@
       <div class="item-name">Name</div>
       <div class="item-name">Action</div>
       <div class="item-controls">
-        <a class="item-control item-create" title="Create Ability" data-type="ability-class"><i class="fas fa-plus"></i> Add Class Ability</a>
+        <a class="item-control item-create" title="Create Class Ability" data-type="ability-class"><i class="fas fa-plus"></i> Add Class Ability</a>
       </div>
     </li>
     {{#each class_abilities as |ability id|}}
