--- a/templates/item/item-ability-sheet.html
+++ b/templates/item/item-ability-sheet.html
@@ -51,8 +51,8 @@
       </div>
 
       <div class="resource">
-        <label class="resource-label">Is this a Race Ability?</label>
-        <input class="input-checkbox-cpt" name="system.is_race_ability" type="checkbox" {{checked system.is_race_ability}}>
+        <label class="resource-label">Is this a Species Ability?</label>
+        <input class="input-checkbox-cpt" name="system.is_species_ability" type="checkbox" {{checked system.is_species_ability}}>
       </div>
 
       <div class="resource">
