--- a/templates/item/item-distinction-sheet.html
+++ b/templates/item/item-distinction-sheet.html
@@ -23,10 +23,7 @@
     {{!-- Attributes Tab --}}
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- As you add new fields, add them in here! --}}
-      <div class="resource">
-        <label class="resource-label">Die</label>
-        <input type="text" name="system.dice" value="{{system.dice}}" data-dtype="String"/>
-      </div>
+      {{> "systems/earthland/templates/item/parts/rollable.html"}}
       <div class="resource">
         <label class="resource-label">Hindrance Die</label>
         <input type="text" name="system.hinder_die" value="{{system.hinder_die}}" disabled="disabled" data-dtype="String"/>
