--- a/templates/item/item-feature-sheet.html
+++ b/templates/item/item-feature-sheet.html
@@ -27,9 +27,8 @@
         <input type="text" name="system.requirements" value="{{system.requirements}}" data-dtype="String"/>
       </div>
 
-      <div class="resource">
-        <label class="resource-label">Dice</label>
-        <input type="text" name="system.dice" value="{{system.dice}}" data-dtype="String"/>
+      <div>
+        {{> "systems/earthland/templates/item/parts/rollable.html"}}
       </div>
 
       <div class="resource">
@@ -43,8 +42,8 @@
       </div>
 
       <div class="resource">
-        <label class="resource-label">Is this a Race Feature?</label>
-        <input class="input-checkbox-cpt" name="system.is_race_feature" type="checkbox" {{checked system.is_race_feature}}>
+        <label class="resource-label">Is this a Species Feature?</label>
+        <input class="input-checkbox-cpt" name="system.is_species_feature" type="checkbox" {{checked system.is_species_feature}}>
       </div>
 
       <div class="resource">
